--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <div class='wrapper'>
         <h1>JS中国开发者大会</h1>
         <p>2015年7月11日 － 2015年7月12日</p>
-<!--         <p>12:00 - 15:00</p> -->
+        <!--         <p>12:00 - 15:00</p> -->
         <p>中国深圳</p>
         <a class='button'>购票参会<span>敬请期待</span></a>
       </div>
@@ -50,7 +50,7 @@
       <nav class='wrapper'>
         <a href='#item1'>关于我们</a>
         <a href='#item2'>演讲嘉宾</a>
-<!--         <a href='#item3'></a> -->
+        <!--         <a href='#item3'></a> -->
         <a href='#item4'>赞助商</a>
         <a href='#item5'>合作媒体</a>
         <a href='#item6'>会场地址</a>
@@ -98,159 +98,244 @@
     </div>
   </section>
   <!-- Speakers -->
-    <section class='section speakers' id='item2'>
+  <section class='section speakers' id='item2'>
     <div class='title'>
       <h1>演讲嘉宾</h1>
     </div>
-      <div class='tip'>敬请期待</div>
-<!--     <ul>
+    <ul>
       <li>
-        <img src='/images/speaker1.jpg' />
-        <div class='cover'>
-          <div class='info'>
-            <h4>胡痴儿</h4>
-            <p>用户体验设计师</p>
-            <a href='#' class='icon github'></a>
-            <a href='#' class='icon weibo'></a>
-          </div>
-        </div>
+        <a href='https://github.com/yyx990803' target='new'>
+          <img src='/images/speakers/1.jpg' />
+          <div class='cover'>
+            <div class='info'>
+              <h4>尤雨溪</h4>
+              <p>Meteor</p>
+            </div>
         </a>
+        </div>
       </li>
       <li>
-        <img src='/images/speaker1.jpg' />
-        <div class='cover'>
-          <div class='info'>
-            <h4>胡痴儿</h4>
-            <p>用户体验设计师</p>
-            <a href='#' class='icon github'></a>
-            <a href='#' class='icon twitter'></a>
-          </div>
-        </div>
+        <a href='https://github.com/JacksonTian' target='new'>
+          <img src='/images/speakers/2.jpg' />
+          <div class='cover'>
+            <div class='info'>
+              <h4>朴灵</h4>
+              <p>阿里云</p>
+            </div>
         </a>
+        </div>
       </li>
       <li>
-        <img src='/images/speaker1.jpg' />
-        <div class='cover'>
-          <div class='info'>
-            <h4>胡痴儿</h4>
-            <p>用户体验设计师</p>
-            <a href='#' class='icon github'></a>
-            <a href='#' class='icon weibo'></a>
-          </div>
-        </div>
+        <a href='https://github.com/threeday0905' target='new'>
+          <img src='/images/speakers/3.jpg' />
+          <div class='cover'>
+            <div class='info'>
+              <h4>赫门</h4>
+              <p>Alibaba</p>
+            </div>
         </a>
+        </div>
       </li>
       <li>
-        <img src='/images/speaker1.jpg' />
-        <div class='cover'>
-          <div class='info'>
-            <h4>胡痴儿</h4>
-            <p>用户体验设计师</p>
-            <a href='#' class='icon github'></a>
-            <a href='#' class='icon twitter'></a>
-          </div>
-        </div>
+        <a href='https://github.com/mafintosh' target='new'>
+          <img src='/images/speakers/4.jpg' />
+          <div class='cover'>
+            <div class='info'>
+              <h4>Mathias Buus</h4>
+              <p></p>
+            </div>
         </a>
+        </div>
       </li>
       <li>
-        <img src='/images/speaker1.jpg' />
-        <div class='cover'>
-          <div class='info'>
-            <h4>胡痴儿</h4>
-            <p>用户体验设计师</p>
-            <a href='#' class='icon github'></a>
-            <a href='#' class='icon twitter'></a>
-          </div>
-        </div>
+        <a href='https://github.com/pissang' target='new'>
+          <img src='/images/speakers/5.jpg' />
+          <div class='cover'>
+            <div class='info'>
+              <h4>沈毅</h4>
+              <p>百度</p>
+            </div>
         </a>
+        </div>
       </li>
       <li>
-        <img src='/images/speaker1.jpg' />
-        <div class='cover'>
-          <div class='info'>
-            <h4>胡痴儿</h4>
-            <p>用户体验设计师</p>
-            <a href='#' class='icon github'></a>
-            <a href='#' class='icon twitter'></a>
-          </div>
-        </div>
+        <a href='http://github.com/mgonto' target='new'>
+          <img src='/images/speakers/6.jpg' />
+          <div class='cover'>
+            <div class='info'>
+              <h4>Martin Naumann</h4>
+              <p>Archilogic</p>
+            </div>
         </a>
+        </div>
       </li>
       <li>
-        <img src='/images/speaker1.jpg' />
-        <div class='cover'>
-          <div class='info'>
-            <h4>胡痴儿</h4>
-            <p>用户体验设计师</p>
-            <a href='#' class='icon github'></a>
-            <a href='#' class='icon twitter'></a>
-          </div>
-        </div>
+        <a href='https://github.com/hax' target='new'>
+          <img src='/images/speakers/7.jpg' />
+          <div class='cover'>
+            <div class='info'>
+              <h4>Hax</h4>
+              <p>百姓网</p>
+            </div>
         </a>
+        </div>
       </li>
       <li>
-        <img src='/images/speaker1.jpg' />
-        <div class='cover'>
-          <div class='info'>
-            <h4>胡痴儿</h4>
-            <p>用户体验设计师</p>
-            <a href='#' class='icon github'></a>
-            <a href='#' class='icon twitter'></a>
-          </div>
-        </div>
+        <a href='https://twitter.com/TimPietrusky' target='new'>
+          <img src='/images/speakers/8.jpg' />
+          <div class='cover'>
+            <div class='info'>
+              <h4>Tim Pietrusky</h4>
+              <p>Synoa GmbH</p>
+            </div>
         </a>
+        </div>
+      </li>
+<!--       <li>
+        <a href='https://github.com/ngot' target='new'>
+          <img src='/images/speakers/0.jpg' />
+          <div class='cover'>
+            <div class='info'>
+              <h4>庄恒飞</h4>
+              <p>孢子社区</p>
+            </div>
+        </a>
+        </div>
+      </li> -->
+      <li>
+        <a href='http://github.com/hulufei' target='new'>
+          <img src='/images/speakers/10.jpg' />
+          <div class='cover'>
+            <div class='info'>
+              <h4>刘辉</h4>
+              <p>Coding Net</p>
+            </div>
+        </a>
+        </div>
       </li>
       <li>
-        <img src='/images/speaker1.jpg' />
-        <div class='cover'>
-          <div class='info'>
-            <h4>胡痴儿</h4>
-            <p>用户体验设计师</p>
-            <a href='#' class='icon github'></a>
-            <a href='#' class='icon twitter'></a>
-          </div>
-        </div>
+        <a href='https://github.com/dead-horse' target='new'>
+          <img src='/images/speakers/11.jpg' />
+          <div class='cover'>
+            <div class='info'>
+              <h4>何翊宇</h4>
+              <p>阿里巴巴</p>
+            </div>
         </a>
+        </div>
       </li>
       <li>
-        <img src='/images/speaker1.jpg' />
-        <div class='cover'>
-          <div class='info'>
-            <h4>胡痴儿</h4>
-            <p>用户体验设计师</p>
-            <a href='#' class='icon github'></a>
-            <a href='#' class='icon twitter'></a>
-          </div>
-        </div>
+        <a href='https://twitter.com/holtbt' target='new'>
+          <img src='/images/speakers/12.jpg' />
+          <div class='cover'>
+            <div class='info'>
+              <h4>Brian Holt</h4>
+              <p>Netflix</p>
+            </div>
         </a>
+        </div>
       </li>
       <li>
-        <img src='/images/speaker1.jpg' />
-        <div class='cover'>
-          <div class='info'>
-            <h4>胡痴儿</h4>
-            <p>用户体验设计师</p>
-            <a href='#' class='icon github'></a>
-            <a href='#' class='icon twitter'></a>
-          </div>
-        </div>
+        <a href='https://github.com/Unitech' target='new'>
+          <img src='/images/speakers/13.jpg' />
+          <div class='cover'>
+            <div class='info'>
+              <h4>Alexandre Strzelewicz</h4>
+              <p>Keymetrics</p>
+            </div>
         </a>
+        </div>
       </li>
       <li>
-        <img src='/images/speaker1.jpg' />
-        <div class='cover'>
-          <div class='info'>
-            <h4>胡痴儿</h4>
-            <p>用户体验设计师</p>
-            <a href='#' class='icon github'></a>
-            <a href='#' class='icon twitter'></a>
-          </div>
-        </div>
+        <a href='https://github.com/zensh' target='new'>
+          <img src='/images/speakers/14.jpg' />
+          <div class='cover'>
+            <div class='info'>
+              <h4>严清</h4>
+              <p>Teambition</p>
+            </div>
         </a>
+        </div>
       </li>
-    </ul> -->
+      <li>
+        <a href='https://github.com/leizongmin' target='new'>
+          <img src='/images/speakers/15.jpg' />
+          <div class='cover'>
+            <div class='info'>
+              <h4>雷宗民</h4>
+              <p>一登</p>
+            </div>
+        </a>
+        </div>
+      </li>
+      <li>
+        <a href='https://github.com/EyalAr/' target='new'>
+          <img src='/images/speakers/16.jpg' />
+          <div class='cover'>
+            <div class='info'>
+              <h4>Eyal Arubas</h4>
+              <p>EF</p>
+            </div>
+        </a>
+        </div>
+      </li>
+      <li>
+        <a href='https://github.com/lloydwatkin' target='new'>
+          <img src='/images/speakers/17.jpg' />
+          <div class='cover'>
+            <div class='info'>
+              <h4>Lloyd Watkin</h4>
+              <p>Amazon</p>
+            </div>
+        </a>
+        </div>
+      </li>
+      <li>
+        <a href='https://github.com/ajfisher' target='new'>
+          <img src='/images/speakers/18.jpg' />
+          <div class='cover'>
+            <div class='info'>
+              <h4>Andrew Fisher</h4>
+              <p>JBA</p>
+            </div>
+        </a>
+        </div>
+      </li>
+      <li>
+        <a href='http://www.zhihu.com/people/wen-tian-le' target='new'>
+          <img src='/images/speakers/19.jpg' />
+          <div class='cover'>
+            <div class='info'>
+              <h4>文天乐</h4>
+              <p>Ucloud</p>
+            </div>
+        </a>
+        </div>
+      </li>
+<!--       <li>
+        <a href='' target='new'>
+          <img src='/images/speakers/0.jpg' />
+          <div class='cover'>
+            <div class='info'>
+              <h4></h4>
+              <p>七牛</p>
+            </div>
+        </a>
+        </div>
+      </li> -->
+      <li>
+        <a href='https://github.com/loddit' target='new'>
+          <img src='/images/speakers/21.jpg' />
+          <div class='cover'>
+            <div class='info'>
+              <h4>李博涵</h4>
+              <p>一熊科技</p>
+            </div>
+        </a>
+        </div>
+      </li>
+    </ul>
   </section>
-
   <!-- Banner -->
   <section class='banner second'>
     <div class='wrapper'>
@@ -319,7 +404,7 @@
   </section>
   <!-- Venue -->
   <section class='section venue' id='item6'>
-  <div class='tip'>敬请期待</div>
+    <div class='tip'>敬请期待</div>
     <div class='wrapper'>
       <div class='left'>
         <h1>会场地址</h1>
@@ -336,8 +421,7 @@
   <!-- Banner -->
   <section class='banner third'>
     <div class='wrapper'>
-      <h1>订阅最新信息</h1>
-      
+      <h1>订阅最新信息</h1> 
 
 
 
