change baoz.me to baoz.cn & fix header

--- a/code-of-conduct/index.html
+++ b/code-of-conduct/index.html
@@ -3,9 +3,7 @@
 <head>
   <meta charset='utf-8'/>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
-
   <title>JS中国开发者大会 | ShenJS</title>
-
   <meta http-equiv='Content-Language' content='en'/>
   <meta name='keywords' content='Javascript, Node.js, realtime, JSconf, Shenzhen, China, conference'/>
   <meta name='description' content='今年夏天中国主要的JavaScript会议，我们一起在深圳'/>
@@ -31,7 +29,7 @@
 <meta name='msapplication-config' content='/assets/favicons/browserconfig.xml'> -->
 
   <!-- CSS -->
-  <link href='/assets/styles.css' rel='stylesheet' type='text/css'/>
+  <link href='/assets/styles.css?v=20150603' rel='stylesheet' type='text/css'/>
 </head>
 
 <body class='page-code-of-conduct code-of-conduct'>
