--- a/en/index.html
+++ b/en/index.html
@@ -3,9 +3,7 @@
 <head>
   <meta charset='utf-8'/>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
-
   <title>JS conference in Shenzhen | ShenJS</title>
-
   <meta http-equiv='Content-Language' content='en'/>
   <meta name='keywords' content='Javascript, Node.js, realtime, JSconf, Shenzhen, China, conference'/>
   <meta name='description' content='Join us for the main Javascript conference in Shenzhen, China this summer.'/>
@@ -31,7 +29,7 @@
 <meta name='msapplication-config' content='/assets/favicons/browserconfig.xml'> -->
 
   <!-- CSS -->
-  <link href='/assets/styles.css' rel='stylesheet' type='text/css'/>
+  <link href='/assets/styles.css?v=20150603' rel='stylesheet' type='text/css'/>
 </head>
 
 
@@ -197,7 +195,7 @@
           <div class='cover'>
             <div class='info'>
               <h4>Hengfei Zhuang</h4>
-              <p>baoz.me</p>
+              <p>baoz.cn</p>
             </div>
         </a>
         </div>
