--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
           <div class='cover'>
             <div class='info'>
               <h4>赫门</h4>
-              <p>Alibaba</p>
+              <p>阿里巴巴</p>
             </div>
         </a>
         </div>
