--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
         </div>
       </li>
       <li>
-        <a href='http://github.com/mgonto' target='new'>
+        <a href='http://geekonaut.de' target='new'>
           <img src='/images/speakers/6.jpg' />
           <div class='cover'>
             <div class='info'>
