change Yiyu He to dead-horse

--- a/en/index.html
+++ b/en/index.html
@@ -7,8 +7,8 @@
   <meta http-equiv='Content-Language' content='en'/>
   <meta name='keywords' content='Javascript, Node.js, realtime, JSconf, Shenzhen, China, conference'/>
   <meta name='description' content='Join us for the main Javascript conference in Shenzhen, China this summer.'/>
-  
-  
+
+
   <!-- Favicons -->
   <!-- <link rel='shortcut icon' href='/assets/favicons/favicon.ico'>
 <link rel='apple-touch-icon' sizes='57x57' href='/assets/favicons/apple-touch-icon-57x57.png'>
@@ -216,7 +216,7 @@
           <img src='/images/speakers/11.jpg' />
           <div class='cover'>
             <div class='info'>
-              <h4>Yiyu He</h4>
+              <h4>dead-horse</h4>
               <p>alibaba</p>
             </div>
         </a>
@@ -419,7 +419,7 @@
   <!-- Banner -->
   <section class='banner third'>
     <div class='wrapper'>
-      <h1>Keep up to date</h1> 
+      <h1>Keep up to date</h1>
 
 
 
@@ -438,7 +438,7 @@
   </section>
   <!-- Footer -->
   <footer id='footer'>
-       
+
 <div class='wrapper'>
   <a href='/code-of-conduct-en' target="_self">Code Of Conduct</a>
   <a href='http://jsconf.cn' target="new">JSConf.cn</a>
@@ -466,7 +466,7 @@
     var s = document.getElementsByTagName('script')[0];
     s.parentNode.insertBefore(t, s);
   })();
-</script> 
+</script>
 </body>
 
 </html>
