--- a/en/index.html
+++ b/en/index.html
@@ -29,7 +29,7 @@
 <meta name='msapplication-config' content='/assets/favicons/browserconfig.xml'> -->
 
   <!-- CSS -->
-  <link href='/assets/styles.css?v=20150603' rel='stylesheet' type='text/css'/>
+  <link href='/assets/styles.css?v=20150605' rel='stylesheet' type='text/css'/>
 </head>
 
 
@@ -189,9 +189,9 @@
         </a>
         </div>
       </li>
-<!--       <li>
+      <li>
         <a href='https://github.com/ngot' target='new'>
-          <img src='/images/speakers/0.jpg' />
+          <img src='/images/speakers/9.jpg' />
           <div class='cover'>
             <div class='info'>
               <h4>Hengfei Zhuang</h4>
@@ -199,14 +199,14 @@
             </div>
         </a>
         </div>
-      </li> -->
+      </li>
       <li>
         <a href='http://github.com/hulufei' target='new'>
           <img src='/images/speakers/10.jpg' />
           <div class='cover'>
             <div class='info'>
               <h4>Hui Liu</h4>
-              <p>Coding Net</p>
+              <p>Coding.net</p>
             </div>
         </a>
         </div>
@@ -216,8 +216,8 @@
           <img src='/images/speakers/11.jpg' />
           <div class='cover'>
             <div class='info'>
-              <h4>Yiyu He</h4>
-              <p>alibaba</p>
+              <h4>dead-horse</h4>
+              <p>Alibaba</p>
             </div>
         </a>
         </div>
@@ -310,7 +310,7 @@
         </a>
         </div>
       </li>
-<!--       <li>
+      <!--       <li>
         <a href='' target='new'>
           <img src='/images/speakers/0.jpg' />
           <div class='cover'>
@@ -341,8 +341,8 @@
       <a class='button buyticket'>Buy Ticket<span>Coming soon</span></a>
     </div>
   </section>
-  <!-- sponsers-->
-  <section class='section sponsers' id='item4'>
+  <!-- sponsors-->
+  <section class='section sponsors' id='item4'>
     <div class='title'>
       <h1>sponsors</h1>
     </div>
@@ -396,6 +396,12 @@
         </li>
         <li>
           <a href='http://www.broadview.com.cn/' target='new'><img src='/images/broadview.png' width='250' /></a>
+        </li>
+                <li>
+          <a href='https://cnodejs.org/' target='new'><img src='/images/cnode.png' width='250' /></a>
+        </li>
+                <li>
+          <a href='http://www.ptpress.com.cn/default.aspx' target='new'><img src='/images/ptpress.png' width='250' /></a>
         </li>
       </ul>
     </div>
