--- a/en/index.html
+++ b/en/index.html
@@ -1,13 +1,14 @@
 <!doctype html>
 <html lang='en'>
-
 <head>
-  <meta charset='utf-8' />
+  <meta charset='utf-8'/>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
   <title>JS conference in Shenzhen | ShenJS</title>
-  <meta http-equiv='Content-Language' content='en' />
-  <meta name='keywords' content='Javascript, Node.js, realtime, JSconf, Shenzhen, China, conference' />
-  <meta name='description' content='Join us for the main Javascript conference in Shenzhen, China this summer.' />
+  <meta http-equiv='Content-Language' content='en'/>
+  <meta name='keywords' content='Javascript, Node.js, realtime, JSconf, Shenzhen, China, conference'/>
+  <meta name='description' content='Join us for the main Javascript conference in Shenzhen, China this summer.'/>
+  
+  
   <!-- Favicons -->
   <!-- <link rel='shortcut icon' href='/assets/favicons/favicon.ico'>
 <link rel='apple-touch-icon' sizes='57x57' href='/assets/favicons/apple-touch-icon-57x57.png'>
@@ -26,9 +27,11 @@
 <meta name='msapplication-TileColor' content='#da532c'>
 <meta name='msapplication-TileImage' content='/assets/favicons/mstile-144x144.png'>
 <meta name='msapplication-config' content='/assets/favicons/browserconfig.xml'> -->
+
   <!-- CSS -->
-  <link href='/assets/styles.css?v=20150605' rel='stylesheet' type='text/css' />
+  <link href='/assets/styles.css?v=20150605' rel='stylesheet' type='text/css'/>
 </head>
+
 
 <body class='page-en index-launch'>
   <header id='header-new'>
@@ -36,28 +39,27 @@
       <div class='wrapper'>
         <h1>JSConf China</h1>
         <p>11th-12th July, 2015</p>
-        <!--         <p>12:00 - 15:00</p> -->
+        <p>09:15 - 19:00</p>
         <p>Shenzhen, China</p>
-        <a class='button'>Buy Ticket<span>Coming soon</span></a>
+        <a class='button' href='http://shenjs2015.eventdove.com/' target='new'>Buy Ticket</a>
       </div>
     </header>
     <div class='menu'>
       <nav class='wrapper'>
         <a href='#item1'>about us</a>
         <a href='#item2'>speakers</a>
-        <!--         <a href='#item3'></a> -->
+<!--         <a href='#item3'>schedule</a> -->
         <a href='#item4'>sponsors</a>
         <a href='#item5'>media partners</a>
         <a href='#item6'>venue</a>
-        <a class='button buyticket'>Buy Ticket<span>Coming soon</span></a>
+        <a class='button buyticket' href='http://shenjs2015.eventdove.com/' target='new'>Buy Ticket</a>
         <div class='right'>
-          <a href='/'>中文</a>
-          <nav class='social'>
-            <a class='weibo' href='http://weibo.com/JSConfChina' target='_blank'><span>Weibo</span></a>
-            <a class='twitter' href='https://twitter.com/jsconfchina' target='_blank'><span>Twitter</span></a>
-            <a class='github' href='http://github.com/jsconfcn/ShenJS' target='_blank'><span>GitHub</span></a>
-            <a class='slack' href='https://shenjs.herokuapp.com/' target='_blank'><span>Slack</span></a>
-          </nav>
+           <a href='/'>中文</a>     <nav class='social'>
+      <a class='weibo' href='http://weibo.com/JSConfChina' target='_blank'><span>Weibo</span></a>
+      <a class='twitter' href='https://twitter.com/jsconfchina' target='_blank'><span>Twitter</span></a>
+      <a class='github' href='http://github.com/jsconfcn/ShenJS' target='_blank'><span>GitHub</span></a>
+      <a class='slack' href='https://shenjs.herokuapp.com/' target='_blank'><span>Slack</span></a>
+    </nav>
         </div>
       </nav>
     </div>
@@ -69,7 +71,7 @@
     </div>
     <div class='wrapper'>
       <p>JSConf China is a two day conference focused on JavaScript and Node.js technologies. This developer driven event brings together notable figures from both the Chinese and international JavaScript communities to share their knowledge and passion for JavaScript. After Shanghai, Beijing and Hangzhou, JSConf China is going to Shenzhen from July 11-12 in 2015.
-      </p>
+</p>
     </div>
     <div class='timeline'>
       <div class='wrapper'>
@@ -265,7 +267,7 @@
         </div>
       </li>
       <li>
-        <a href='https://github.com/EyalAr/' target='new'>
+        <a href='http://careers.ef.com/cn/categories/technology/' target='new'>
           <img src='/images/speakers/16.jpg' />
           <div class='cover'>
             <div class='info'>
@@ -332,11 +334,127 @@
       </li>
     </ul>
   </section>
+   <!-- Schedule -->
+<!--   <section class='section schedule' id='item3'>
+    <div class='title'>
+      <h1>schedule</h1>
+    </div>
+    <div class='wrapper'>
+      <div class='list day1'>
+        <h2>7/11</h2>
+        <ul>
+          <li>
+            <time>08:15</time>
+            <div>
+              <h4>签到</h4>
+              <p>John Doe</p>
+            </div>
+          </li>
+          <li>
+            <time>08:15</time>
+            <div>
+              <h4>JS中国开发者大会介绍</h4>
+              <p>John Doe</p>
+            </div>
+          </li>
+          <li>
+            <time>08:15</time>
+            <div>
+              <h4>Then.js 异步库的实现原理及优缺点</h4>
+              <p>John Doe</p>
+            </div>
+          </li>
+          <li>
+            <time>08:15</time>
+            <div>
+              <h4>签到</h4>
+              <p>John Doe</p>
+            </div>
+          </li>
+          <li>
+            <time>08:15</time>
+            <div>
+              <h4>Patrisika - Theoretical and Practical Code Generation</h4>
+              <p>John Doe</p>
+            </div>
+          </li>
+          <li>
+            <time>08:15</time>
+            <div>
+              <h4>签到</h4>
+              <p>John Doe</p>
+            </div>
+          </li>
+          <li>
+            <time>08:15</time>
+            <div>
+              <h4>签到</h4>
+              <p>John Doe</p>
+            </div>
+          </li>
+        </ul>
+      </div>
+      <div class='list day2'>
+        <h2>7/12</h2>
+        <ul>
+          <li>
+            <time>08:15</time>
+            <div>
+              <h4>签到</h4>
+              <p>John Doe</p>
+            </div>
+          </li>
+          <li>
+            <time>08:15</time>
+            <div>
+              <h4>JS中国开发者大会介绍</h4>
+              <p>John Doe</p>
+            </div>
+          </li>
+          <li>
+            <time>08:15</time>
+            <div>
+              <h4>签到</h4>
+              <p>John Doe</p>
+            </div>
+          </li>
+          <li>
+            <time>08:15</time>
+            <div>
+              <h4>签到</h4>
+              <p>John Doe</p>
+            </div>
+          </li>
+          <li>
+            <time>08:15</time>
+            <div>
+              <h4>签到</h4>
+              <p>John Doe</p>
+            </div>
+          </li>
+          <li>
+            <time>08:15</time>
+            <div>
+              <h4>签到</h4>
+              <p>John Doe</p>
+            </div>
+          </li>
+          <li>
+            <time>08:15</time>
+            <div>
+              <h4>签到</h4>
+              <p>John Doe</p>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </section> -->
   <!-- Banner -->
   <section class='banner second'>
     <div class='wrapper'>
       <h1>Buy your ticket</h1>
-      <a class='button buyticket'>Buy Ticket<span>Coming soon</span></a>
+      <a class='button buyticket' href='http://shenjs2015.eventdove.com/' target='new'>Buy Ticket</a>
     </div>
   </section>
   <!-- sponsors-->
@@ -395,10 +513,10 @@
         <li>
           <a href='http://www.broadview.com.cn/' target='new'><img src='/images/broadview.png' width='250' /></a>
         </li>
-        <li>
+                <li>
           <a href='https://cnodejs.org/' target='new'><img src='/images/cnode.png' width='250' /></a>
         </li>
-        <li>
+                <li>
           <a href='http://www.ptpress.com.cn/default.aspx' target='new'><img src='/images/ptpress.png' width='250' /></a>
         </li>
       </ul>
@@ -406,12 +524,12 @@
   </section>
   <!-- Venue -->
   <section class='section venue' id='item6'>
-    <div class='tip'>Coming soon</div>
     <div class='wrapper'>
       <div class='left'>
         <h1>venue</h1>
-        <h4><a href='http://qh.vanke.com/' target='new'>Qianhai Vanke Enterprise Dream Park (Special Zone Mansion)</a></h4>
-        <p>Inside of Shenzhen Qianhai Deep Harbor Modern Service Industry Hezuoqu, Yuexing 2nd Road, Shenzhen</p>
+        <h4><a href='http://qh.vanke.com/' target='new'>Qianhai Vanke Enterprise Dream Park (Special Zone Mansion)</a>
+</h4>
+        <p>Inside of Shenzhen Qianhai Deep Harbor Modern Service Industry Hezuoqu, Yuexing 2nd Road, Shenzhen, Guangdong</p>
         <a target='new' href='http://qh.vanke.com/'>http://qh.vanke.com/</a>
       </div>
       <div class='right'>
@@ -422,30 +540,37 @@
   <!-- Banner -->
   <section class='banner third'>
     <div class='wrapper'>
-      <h1>Keep up to date</h1>
-      <form action='http://wiredcraft.us2.list-manage1.com/subscribe/post?u=18eb8d6c34ad5d4e781541da9&amp;id=ce3898dd2e' method='post' target='_blank'>
-        <div class='field'>
-          <input type='email' value='' name='EMAIL' class='required email' placeholder='Your email address' />
-        </div>
-        <div class='field'>
-          <input type='submit' value='Subscribe' name='subscribe' class='button' />
-        </div>
-      </form>
+      <h1>Keep up to date</h1> 
+
+
+
+
+
+<form action='http://wiredcraft.us2.list-manage1.com/subscribe/post?u=18eb8d6c34ad5d4e781541da9&amp;id=ce3898dd2e' method='post' target='_blank'>
+  <div class='field'>
+    <input type='email' value='' name='EMAIL' class='required email' placeholder='Your email address'/>
+  </div>
+  <div class='field'>
+    <input type='submit' value='Subscribe' name='subscribe' class='button'/>
+  </div>
+</form>
       <!-- <a class='button buyticket'>Buy Ticket<span>Coming soon</span></a> -->
     </div>
   </section>
   <!-- Footer -->
   <footer id='footer'>
-    <div class='wrapper'>
-      <a href='/code-of-conduct-en' target="_self">Code Of Conduct</a>
-      <a href='http://jsconf.cn' target="new">JSConf.cn</a>
-      <a href='https://creativecommons.org/licenses/by/3.0/' target="new">CCA 3.0 License</a>
-      <a href='http://wiredcraft.com' target="new">Built by Wiredcraft</a>
-      <div class='right'>
-        <span>Follow our WeChat</span>
-        <div class='qrcode'><img src='/images/qrcode.jpg' class='img' width='50' /><img src='/images/qrcode.jpg' class='tooltip' /></div>
-      </div>
-    </div>
+       
+<div class='wrapper'>
+  <a href='/code-of-conduct-en' target="_self">Code Of Conduct</a>
+  <a href='http://jsconf.cn' target="new">JSConf.cn</a>
+  <a href='https://creativecommons.org/licenses/by/3.0/' target="new">CCA 3.0 License</a>
+  <a href='http://wiredcraft.com' target="new">Built by Wiredcraft</a>
+  <div class='right'>
+    <span>Follow our WeChat</span>
+    <div class='qrcode'><img src='/images/qrcode.jpg' class='img' width='50' /><img src='/images/qrcode.jpg' class='tooltip' /></div>
+  </div>
+</div>
+
   </footer>
   <!-- JS -->
   <script src='/assets/scripts.js' type='text/javascript'></script>
@@ -453,16 +578,16 @@
   <script type='text/javascript'>
   var _gauges = _gauges || [];
   (function() {
-    var t = document.createElement('script');
-    t.type = 'text/javascript';
+    var t   = document.createElement('script');
+    t.type  = 'text/javascript';
     t.async = true;
-    t.id = 'gauges-tracker';
+    t.id    = 'gauges-tracker';
     t.setAttribute('data-site-id', '54ee7d005dd053560400c9bd');
     t.src = '//secure.gaug.es/track.js';
     var s = document.getElementsByTagName('script')[0];
     s.parentNode.insertBefore(t, s);
   })();
-  </script>
+</script> 
 </body>
 
 </html>
