--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!doctype html>
 <html lang='zh'>
-
 <head>
-  <meta charset='utf-8' />
+  <meta charset='utf-8'/>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
   <title>JS中国开发者大会 | ShenJS</title>
-  <meta http-equiv='Content-Language' content='en' />
-  <meta name='keywords' content='Javascript, Node.js, realtime, JSconf, Shenzhen, China, conference' />
-  <meta name='description' content='今年夏天中国主要的JavaScript会议，我们一起在深圳' />
+  <meta http-equiv='Content-Language' content='en'/>
+  <meta name='keywords' content='Javascript, Node.js, realtime, JSconf, Shenzhen, China, conference'/>
+  <meta name='description' content='今年夏天中国主要的JavaScript会议，我们一起在深圳'/>
+  
+  
   <!-- Favicons -->
   <!-- <link rel='shortcut icon' href='/assets/favicons/favicon.ico'>
 <link rel='apple-touch-icon' sizes='57x57' href='/assets/favicons/apple-touch-icon-57x57.png'>
@@ -26,9 +27,11 @@
 <meta name='msapplication-TileColor' content='#da532c'>
 <meta name='msapplication-TileImage' content='/assets/favicons/mstile-144x144.png'>
 <meta name='msapplication-config' content='/assets/favicons/browserconfig.xml'> -->
+
   <!-- CSS -->
-  <link href='/assets/styles.css?v=20150605' rel='stylesheet' type='text/css' />
+  <link href='/assets/styles.css?v=20150605' rel='stylesheet' type='text/css'/>
 </head>
+
 
 <body class='page- front  index-launch'>
   <header id='header-new'>
@@ -36,28 +39,27 @@
       <div class='wrapper'>
         <h1>JS中国开发者大会</h1>
         <p>2015年7月11日 － 2015年7月12日</p>
-        <!--         <p>12:00 - 15:00</p> -->
+        <p>09:15 - 19:00</p>
         <p>中国深圳</p>
-        <a class='button'>购票参会<span>敬请期待</span></a>
+        <a class='button' href='http://shenjs2015.eventdove.com/' target='new'>购票参会</a>
       </div>
     </header>
     <div class='menu'>
       <nav class='wrapper'>
         <a href='#item1'>关于我们</a>
         <a href='#item2'>演讲嘉宾</a>
-        <!--         <a href='#item3'></a> -->
+<!--         <a href='#item3'>日程安排</a> -->
         <a href='#item4'>赞助商</a>
         <a href='#item5'>合作媒体</a>
         <a href='#item6'>会场地址</a>
-        <a class='button buyticket'>购票参会<span>敬请期待</span></a>
+        <a class='button buyticket' href='http://shenjs2015.eventdove.com/' target='new'>购票参会</a>
         <div class='right'>
-          <a href='/en'>EN</a>
-          <nav class='social'>
-            <a class='weibo' href='http://weibo.com/JSConfChina' target='_blank'><span>Weibo</span></a>
-            <a class='twitter' href='https://twitter.com/jsconfchina' target='_blank'><span>Twitter</span></a>
-            <a class='github' href='http://github.com/jsconfcn/ShenJS' target='_blank'><span>GitHub</span></a>
-            <a class='slack' href='https://shenjs.herokuapp.com/' target='_blank'><span>Slack</span></a>
-          </nav>
+          <a href='/en'>EN</a>      <nav class='social'>
+      <a class='weibo' href='http://weibo.com/JSConfChina' target='_blank'><span>Weibo</span></a>
+      <a class='twitter' href='https://twitter.com/jsconfchina' target='_blank'><span>Twitter</span></a>
+      <a class='github' href='http://github.com/jsconfcn/ShenJS' target='_blank'><span>GitHub</span></a>
+      <a class='slack' href='https://shenjs.herokuapp.com/' target='_blank'><span>Slack</span></a>
+    </nav>
         </div>
       </nav>
     </div>
@@ -69,7 +71,7 @@
     </div>
     <div class='wrapper'>
       <p>深JS——2015 JS中国开发者大会是一场专注于JavaScript和Node.js技术，为期两天的国际性技术大会。届时，大会会邀请国内外的优秀讲师为大家分享在JavaScript和Node.js技术方面的经验。继上海，北京和杭州之后，JS中国开发者大会将于2015年7月11－12日在深圳召开。
-      </p>
+</p>
     </div>
     <div class='timeline'>
       <div class='wrapper'>
@@ -265,7 +267,7 @@
         </div>
       </li>
       <li>
-        <a href='https://github.com/EyalAr/' target='new'>
+        <a href='http://careers.ef.com/cn/categories/technology/' target='new'>
           <img src='/images/speakers/16.jpg' />
           <div class='cover'>
             <div class='info'>
@@ -332,11 +334,127 @@
       </li>
     </ul>
   </section>
+   <!-- Schedule -->
+<!--   <section class='section schedule' id='item3'>
+    <div class='title'>
+      <h1>日程安排</h1>
+    </div>
+    <div class='wrapper'>
+      <div class='list day1'>
+        <h2>7/11</h2>
+        <ul>
+          <li>
+            <time>08:15</time>
+            <div>
+              <h4>签到</h4>
+              <p>John Doe</p>
+            </div>
+          </li>
+          <li>
+            <time>08:15</time>
+            <div>
+              <h4>JS中国开发者大会介绍</h4>
+              <p>John Doe</p>
+            </div>
+          </li>
+          <li>
+            <time>08:15</time>
+            <div>
+              <h4>Then.js 异步库的实现原理及优缺点</h4>
+              <p>John Doe</p>
+            </div>
+          </li>
+          <li>
+            <time>08:15</time>
+            <div>
+              <h4>签到</h4>
+              <p>John Doe</p>
+            </div>
+          </li>
+          <li>
+            <time>08:15</time>
+            <div>
+              <h4>Patrisika - Theoretical and Practical Code Generation</h4>
+              <p>John Doe</p>
+            </div>
+          </li>
+          <li>
+            <time>08:15</time>
+            <div>
+              <h4>签到</h4>
+              <p>John Doe</p>
+            </div>
+          </li>
+          <li>
+            <time>08:15</time>
+            <div>
+              <h4>签到</h4>
+              <p>John Doe</p>
+            </div>
+          </li>
+        </ul>
+      </div>
+      <div class='list day2'>
+        <h2>7/12</h2>
+        <ul>
+          <li>
+            <time>08:15</time>
+            <div>
+              <h4>签到</h4>
+              <p>John Doe</p>
+            </div>
+          </li>
+          <li>
+            <time>08:15</time>
+            <div>
+              <h4>JS中国开发者大会介绍</h4>
+              <p>John Doe</p>
+            </div>
+          </li>
+          <li>
+            <time>08:15</time>
+            <div>
+              <h4>签到</h4>
+              <p>John Doe</p>
+            </div>
+          </li>
+          <li>
+            <time>08:15</time>
+            <div>
+              <h4>签到</h4>
+              <p>John Doe</p>
+            </div>
+          </li>
+          <li>
+            <time>08:15</time>
+            <div>
+              <h4>签到</h4>
+              <p>John Doe</p>
+            </div>
+          </li>
+          <li>
+            <time>08:15</time>
+            <div>
+              <h4>签到</h4>
+              <p>John Doe</p>
+            </div>
+          </li>
+          <li>
+            <time>08:15</time>
+            <div>
+              <h4>签到</h4>
+              <p>John Doe</p>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </section> -->
   <!-- Banner -->
   <section class='banner second'>
     <div class='wrapper'>
       <h1>2015JS中国开发者大会</h1>
-      <a class='button buyticket'>购票参会<span>敬请期待</span></a>
+      <a class='button buyticket' href='http://shenjs2015.eventdove.com/' target='new'>购票参会</a>
     </div>
   </section>
   <!-- sponsors-->
@@ -395,10 +513,10 @@
         <li>
           <a href='http://www.broadview.com.cn/' target='new'><img src='/images/broadview.png' width='250' /></a>
         </li>
-        <li>
+                <li>
           <a href='https://cnodejs.org/' target='new'><img src='/images/cnode.png' width='250' /></a>
         </li>
-        <li>
+                <li>
           <a href='http://www.ptpress.com.cn/default.aspx' target='new'><img src='/images/ptpress.png' width='250' /></a>
         </li>
       </ul>
@@ -406,12 +524,12 @@
   </section>
   <!-- Venue -->
   <section class='section venue' id='item6'>
-    <div class='tip'>敬请期待</div>
     <div class='wrapper'>
       <div class='left'>
         <h1>会场地址</h1>
-        <h4><a href='http://qh.vanke.com/' target='new'>深圳前海万科企业公馆 (特区馆)</a></h4>
-        <p>深圳市东滨路与临海路交汇处前海深港现代服务业合作区内</p>
+        <h4><a href='http://qh.vanke.com/' target='new'>深圳前海万科企业公馆 (特区馆)</a>
+</h4>
+        <p>广东省深圳市东滨路与临海路交汇处前海深港现代服务业合作区内</p>
         <a target='new' href='http://qh.vanke.com/'>http://qh.vanke.com/</a>
       </div>
       <div class='right'>
@@ -422,30 +540,37 @@
   <!-- Banner -->
   <section class='banner third'>
     <div class='wrapper'>
-      <h1>订阅最新信息</h1>
-      <form action='http://wiredcraft.us2.list-manage1.com/subscribe/post?u=18eb8d6c34ad5d4e781541da9&amp;id=ce3898dd2e' method='post' target='_blank'>
-        <div class='field'>
-          <input type='email' value='' name='EMAIL' class='required email' placeholder='你的邮箱地址' />
-        </div>
-        <div class='field'>
-          <input type='submit' value='订阅' name='subscribe' class='button' />
-        </div>
-      </form>
+      <h1>订阅最新信息</h1> 
+
+
+
+
+
+<form action='http://wiredcraft.us2.list-manage1.com/subscribe/post?u=18eb8d6c34ad5d4e781541da9&amp;id=ce3898dd2e' method='post' target='_blank'>
+  <div class='field'>
+    <input type='email' value='' name='EMAIL' class='required email' placeholder='你的邮箱地址'/>
+  </div>
+  <div class='field'>
+    <input type='submit' value='订阅' name='subscribe' class='button'/>
+  </div>
+</form>
       <!-- <a class='button buyticket'>购票参会<span>敬请期待</span></a> -->
     </div>
   </section>
   <!-- Footer -->
   <footer id='footer'>
-    <div class='wrapper'>
-      <a href='/code-of-conduct' target="_self">Code Of Conduct</a>
-      <a href='http://jsconf.cn' target="new">JSConf.cn</a>
-      <a href='https://creativecommons.org/licenses/by/3.0/' target="new">CCA 3.0 License</a>
-      <a href='http://wiredcraft.com' target="new">Built by Wiredcraft</a>
-      <div class='right'>
-        <span>扫二维码加入JSConf微信群</span>
-        <div class='qrcode'><img src='/images/qrcode.jpg' class='img' width='50' /><img src='/images/qrcode.jpg' class='tooltip' /></div>
-      </div>
-    </div>
+       
+<div class='wrapper'>
+  <a href='/code-of-conduct' target="_self">Code Of Conduct</a>
+  <a href='http://jsconf.cn' target="new">JSConf.cn</a>
+  <a href='https://creativecommons.org/licenses/by/3.0/' target="new">CCA 3.0 License</a>
+  <a href='http://wiredcraft.com' target="new">Built by Wiredcraft</a>
+  <div class='right'>
+    <span>扫二维码加入JSConf微信群</span>
+    <div class='qrcode'><img src='/images/qrcode.jpg' class='img' width='50' /><img src='/images/qrcode.jpg' class='tooltip' /></div>
+  </div>
+</div>
+
   </footer>
   <!-- JS -->
   <script src='/assets/scripts.js' type='text/javascript'></script>
@@ -453,16 +578,16 @@
   <script type='text/javascript'>
   var _gauges = _gauges || [];
   (function() {
-    var t = document.createElement('script');
-    t.type = 'text/javascript';
+    var t   = document.createElement('script');
+    t.type  = 'text/javascript';
     t.async = true;
-    t.id = 'gauges-tracker';
+    t.id    = 'gauges-tracker';
     t.setAttribute('data-site-id', '54ee7d005dd053560400c9bd');
     t.src = '//secure.gaug.es/track.js';
     var s = document.getElementsByTagName('script')[0];
     s.parentNode.insertBefore(t, s);
   })();
-  </script>
+</script> 
 </body>
 
 </html>
