add schedule info

--- a/en/index.html
+++ b/en/index.html
@@ -48,7 +48,7 @@
       <nav class='wrapper'>
         <a href='#item1'>about us</a>
         <a href='#item2'>speakers</a>
-<!--         <a href='#item3'>schedule</a> -->
+        <a href='#item3'>schedule</a>
         <a href='#item4'>sponsors</a>
         <a href='#item5'>media partners</a>
         <a href='#item6'>venue</a>
@@ -334,8 +334,8 @@
       </li>
     </ul>
   </section>
-   <!-- Schedule -->
-<!--   <section class='section schedule' id='item3'>
+  <!-- Schedule -->
+  <section class='section schedule' id='item3'>
     <div class='title'>
       <h1>schedule</h1>
     </div>
@@ -346,50 +346,129 @@
           <li>
             <time>08:15</time>
             <div>
-              <h4>签到</h4>
-              <p>John Doe</p>
+              <h4>Sign In</h4>
             </div>
           </li>
           <li>
-            <time>08:15</time>
+            <time>09:15</time>
             <div>
-              <h4>JS中国开发者大会介绍</h4>
-              <p>John Doe</p>
+              <h4>Openning</h4>
+              <p>Goddy Zhao</p>
             </div>
           </li>
           <li>
-            <time>08:15</time>
+            <time>09:45</time>
             <div>
-              <h4>Then.js 异步库的实现原理及优缺点</h4>
-              <p>John Doe</p>
+              <h4>Database Everywhere: a Reactive Data Architecture for JavaScript Frontends
+</h4>
+              <p>Evan You</p>
             </div>
           </li>
           <li>
-            <time>08:15</time>
+            <time>10:15</time>
             <div>
-              <h4>签到</h4>
-              <p>John Doe</p>
+              <h4>Unlimited Power – ES6 Generators</h4>
+              <p>Brian Holt</p>
             </div>
           </li>
           <li>
-            <time>08:15</time>
+            <time>10:45</time>
             <div>
-              <h4>Patrisika - Theoretical and Practical Code Generation</h4>
-              <p>John Doe</p>
+              <h4>Lucky Draw + Break</h4>
             </div>
           </li>
           <li>
-            <time>08:15</time>
+            <time>11:00</time>
             <div>
-              <h4>签到</h4>
-              <p>John Doe</p>
+              <h4>How koa and toa work &amp; use them in real world</h4>
+              <p>Qing Yan</p>
             </div>
           </li>
           <li>
-            <time>08:15</time>
+            <time>11:30</time>
             <div>
-              <h4>签到</h4>
-              <p>John Doe</p>
+              <h4>My attempt to use Angular.js for a real-time application</h4>
+              <p>Bohan li</p>
+            </div>
+          </li>
+          <li></li>
+          <li>
+            <time>13:30</time>
+            <div>
+              <h4>PM2 and Keymetrics.io</h4>
+              <p>Alexandre Strzelewicz</p>
+            </div>
+          </li>
+          <li>
+            <time>14:00</time>
+            <div>
+              <h4>Nodebot session introduction</h4>
+              <p>Andrew Fisher</p>
+            </div>
+          </li>
+          <li>
+            <time>14:30</time>
+            <div>
+              <h4>Lucky Draw + Break</h4>
+            </div>
+          </li>
+          <li>
+            <time>14:50</time>
+            <div>
+              <h4>Lighting Talk</h4>
+            </div>
+          </li>
+          <li>
+            <time>15:20</time>
+            <div>
+              <h4>How to build a distributed system with Node.js</h4>
+              <p>Tianle Wen</p>
+            </div>
+          </li>
+          <li>
+            <time>15:50</time>
+            <div>
+              <h4>The Rise and Fall of JS Frameworks</h4>
+              <p>Eyal Arubas</p>
+            </div>
+          </li>
+          <li>
+            <time>16:20</time>
+            <div>
+              <h4>Break</h4>
+            </div>
+          </li>
+          <li>
+            <time>16:30</time>
+            <div>
+              <h4>The infinite imaginative data visulization in front-end</h4>
+              <p>Yi Shen</p>
+            </div>
+          </li>
+          <li>
+            <time>17:00</time>
+            <div>
+              <h4>The road to isomorphic web development</h4>
+              <p>Hermen</p>
+            </div>
+          </li>
+          <li>
+            <time>17:30</time>
+            <div>
+              <h4>Lucky Draw</h4>
+            </div>
+          </li>
+          <li>
+            <time>19:00</time>
+            <div>
+              <h4>Afterparty</h4>
+            </div>
+          </li>
+          <li>
+            <time>19:00</time>
+            <div>
+              <h4>Nodebot Session</h4>
+              <p>Andrew Fisher</p>
             </div>
           </li>
         </ul>
@@ -397,59 +476,124 @@
       <div class='list day2'>
         <h2>7/12</h2>
         <ul>
+          <li></li>
           <li>
-            <time>08:15</time>
+            <time>09:15</time>
             <div>
-              <h4>签到</h4>
-              <p>John Doe</p>
+              <h4>To be confirm</h4>
+              <p></p>
             </div>
           </li>
           <li>
-            <time>08:15</time>
+            <time>09:45</time>
             <div>
-              <h4>JS中国开发者大会介绍</h4>
-              <p>John Doe</p>
+              <h4>The optimized tool: node profiler
+</h4>
+              <p>Jackson Tian</p>
             </div>
           </li>
           <li>
-            <time>08:15</time>
+            <time>10:15</time>
             <div>
-              <h4>签到</h4>
-              <p>John Doe</p>
+              <h4>Lucky Draw + Break</h4>
             </div>
           </li>
           <li>
-            <time>08:15</time>
+            <time>10:30</time>
             <div>
-              <h4>签到</h4>
-              <p>John Doe</p>
+              <h4>p2p pipes</h4>
+              <p>Mathias Buus</p>
             </div>
           </li>
           <li>
-            <time>08:15</time>
+            <time>11:00</time>
             <div>
-              <h4>签到</h4>
-              <p>John Doe</p>
+              <h4>Dispatch service under micro service structure</h4>
+              <p>Zongmin Lei</p>
             </div>
           </li>
           <li>
-            <time>08:15</time>
+            <time>11:30</time>
             <div>
-              <h4>签到</h4>
-              <p>John Doe</p>
+              <h4>NERD DISCO: The Next Generation
+</h4>
+              <p>Tim Pietrusky</p>
+            </div>
+          </li>
+          <li></li>
+          <li>
+            <time>13:30</time>
+            <div>
+              <h4>JavaScript: The World&#39;s Best Programming Language
+</h4>
+              <p>Hax</p>
             </div>
           </li>
           <li>
-            <time>08:15</time>
+            <time>14:00</time>
             <div>
-              <h4>签到</h4>
-              <p>John Doe</p>
+              <h4>How fibjs works and how we use it in baoz.cn</h4>
+              <p>Hengfei Zhuang</p>
             </div>
           </li>
+          <li>
+            <time>14:30</time>
+            <div>
+              <h4>Lucky Draw + Break</h4>
+            </div>
+          </li>
+          <li>
+            <time>14:50</time>
+            <div>
+              <h4>Lighting Talk </h4>
+            </div>
+          </li>
+          <li>
+            <time>15:20</time>
+            <div>
+              <h4>Why you should be using XMPP in your next project</h4>
+              <p>Lloyd Watkin</p>
+            </div>
+          </li>
+          <li>
+            <time>15:50</time>
+            <div>
+              <h4>How to build an online IDE with React</h4>
+              <p>Hui Liu</p>
+            </div>
+          </li>
+          <li>
+            <time>16:20</time>
+            <div>
+              <h4>Break</h4>
+            </div>
+          </li>
+          <li>
+            <time>16:30</time>
+            <div>
+              <h4>Diving in - WebGL and WebVR</h4>
+              <p>Martin Naumann</p>
+            </div>
+          </li>
+          <li>
+            <time>17:00</time>
+            <div>
+              <h4>Maintainable Node.js</h4>
+              <p>dead-horse</p>
+            </div>
+          </li>
+          <li>
+            <time>17:30</time>
+            <div>
+              <h4>Lucky Draw</h4>
+            </div>
+          </li>
+          <li></li>
+          <li></li>
         </ul>
       </div>
     </div>
-  </section> -->
+  </section>
   <!-- Banner -->
   <section class='banner second'>
     <div class='wrapper'>
@@ -471,7 +615,7 @@
           <a href='http://www.qiniu.com/' target='new'><img src='/images/qiniu.png' width='250' /></a>
         </li>
         <li>
-          <a href='http://bearyinnovative.com/' target='new'><img src='/images/bearyinnovative.png' height='130' /></a>
+          <a href='https://bearychat.com/' target='new'><img src='/images/bearyinnovative.png' height='130' /></a>
         </li>
         <li>
           <a href='https://coding.net/' target='new'><img src='/images/coding.png' width='250' /></a>
@@ -489,7 +633,7 @@
           <a href='http://www.upyun.com/' target='new'><img src='/images/upyun.png' width='250' /></a>
         </li>
         <li>
-          <a href='http://www.jinshuju.com/' target='new'><img src='/images/jinshuju.png' width='170' /></a>
+          <a href='http://www.jinshuju.net/' target='new'><img src='/images/jinshuju.png' width='170' /></a>
         </li>
       </ul>
     </div>
@@ -513,10 +657,10 @@
         <li>
           <a href='http://www.broadview.com.cn/' target='new'><img src='/images/broadview.png' width='250' /></a>
         </li>
-                <li>
+        <li>
           <a href='https://cnodejs.org/' target='new'><img src='/images/cnode.png' width='250' /></a>
         </li>
-                <li>
+        <li>
           <a href='http://www.ptpress.com.cn/default.aspx' target='new'><img src='/images/ptpress.png' width='250' /></a>
         </li>
       </ul>
