--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <nav class='wrapper'>
         <a href='#item1'>关于我们</a>
         <a href='#item2'>演讲嘉宾</a>
-<!--         <a href='#item3'>日程安排</a> -->
+        <a href='#item3'>日程安排</a>
         <a href='#item4'>赞助商</a>
         <a href='#item5'>合作媒体</a>
         <a href='#item6'>会场地址</a>
@@ -334,8 +334,8 @@
       </li>
     </ul>
   </section>
-   <!-- Schedule -->
-<!--   <section class='section schedule' id='item3'>
+  <!-- Schedule -->
+  <section class='section schedule' id='item3'>
     <div class='title'>
       <h1>日程安排</h1>
     </div>
@@ -347,49 +347,128 @@
             <time>08:15</time>
             <div>
               <h4>签到</h4>
-              <p>John Doe</p>
             </div>
           </li>
           <li>
-            <time>08:15</time>
+            <time>09:15</time>
             <div>
-              <h4>JS中国开发者大会介绍</h4>
-              <p>John Doe</p>
+              <h4>主持人开场</h4>
+              <p>Goddy Zhao</p>
             </div>
           </li>
           <li>
-            <time>08:15</time>
+            <time>09:45</time>
             <div>
-              <h4>Then.js 异步库的实现原理及优缺点</h4>
-              <p>John Doe</p>
+              <h4>Database Everywhere: a Reactive Data Architecture for JavaScript Frontends
+</h4>
+              <p>尤雨溪</p>
             </div>
           </li>
           <li>
-            <time>08:15</time>
+            <time>10:15</time>
             <div>
-              <h4>签到</h4>
-              <p>John Doe</p>
+              <h4>Unlimited Power – ES6 Generators</h4>
+              <p>Brian Holt</p>
             </div>
           </li>
           <li>
-            <time>08:15</time>
+            <time>10:45</time>
             <div>
-              <h4>Patrisika - Theoretical and Practical Code Generation</h4>
-              <p>John Doe</p>
+              <h4>抽奖 + 休息</h4>
             </div>
           </li>
           <li>
-            <time>08:15</time>
+            <time>11:00</time>
             <div>
-              <h4>签到</h4>
-              <p>John Doe</p>
+              <h4>koa 和 toa 的框架原理及开发实践</h4>
+              <p>严清</p>
             </div>
           </li>
           <li>
-            <time>08:15</time>
+            <time>11:30</time>
             <div>
-              <h4>签到</h4>
-              <p>John Doe</p>
+              <h4>用Angular.js做实时应用的一次实践</h4>
+              <p>李博涵</p>
+            </div>
+          </li>
+          <li></li>
+          <li>
+            <time>13:30</time>
+            <div>
+              <h4>PM2 and Keymetrics.io</h4>
+              <p>Alexandre Strzelewicz</p>
+            </div>
+          </li>
+          <li>
+            <time>14:00</time>
+            <div>
+              <h4>Nodebot session introduction</h4>
+              <p>Andrew Fisher</p>
+            </div>
+          </li>
+          <li>
+            <time>14:30</time>
+            <div>
+              <h4>抽奖 + 休息</h4>
+            </div>
+          </li>
+          <li>
+            <time>14:50</time>
+            <div>
+              <h4>Lighting Talk</h4>
+            </div>
+          </li>
+          <li>
+            <time>15:20</time>
+            <div>
+              <h4>如何构建配置集中管理且自动调度的应用集群</h4>
+              <p>文天乐</p>
+            </div>
+          </li>
+          <li>
+            <time>15:50</time>
+            <div>
+              <h4>The Rise and Fall of JS Frameworks</h4>
+              <p>Eyal Arubas</p>
+            </div>
+          </li>
+          <li>
+            <time>16:20</time>
+            <div>
+              <h4>休息</h4>
+            </div>
+          </li>
+          <li>
+            <time>16:30</time>
+            <div>
+              <h4>前端技术在数据可视化领域的无限畅想</h4>
+              <p>沈毅</p>
+            </div>
+          </li>
+          <li>
+            <time>17:00</time>
+            <div>
+              <h4>前端服务化之路</h4>
+              <p>赫门</p>
+            </div>
+          </li>
+          <li>
+            <time>17:30</time>
+            <div>
+              <h4>抽奖</h4>
+            </div>
+          </li>
+          <li>
+            <time>19:00</time>
+            <div>
+              <h4>Afterparty</h4>
+            </div>
+          </li>
+          <li>
+            <time>19:00</time>
+            <div>
+              <h4>Nodebot 教程</h4>
+              <p>Andrew Fisher</p>
             </div>
           </li>
         </ul>
@@ -397,59 +476,124 @@
       <div class='list day2'>
         <h2>7/12</h2>
         <ul>
+          <li></li>
           <li>
-            <time>08:15</time>
+            <time>09:15</time>
             <div>
-              <h4>签到</h4>
-              <p>John Doe</p>
+              <h4>待定</h4>
+              <p></p>
             </div>
           </li>
           <li>
-            <time>08:15</time>
+            <time>09:45</time>
             <div>
-              <h4>JS中国开发者大会介绍</h4>
-              <p>John Doe</p>
+              <h4>调优利器：node profiler
+</h4>
+              <p>朴灵</p>
             </div>
           </li>
           <li>
-            <time>08:15</time>
+            <time>10:15</time>
             <div>
-              <h4>签到</h4>
-              <p>John Doe</p>
+              <h4>抽奖 + 休息</h4>
             </div>
           </li>
           <li>
-            <time>08:15</time>
+            <time>10:30</time>
             <div>
-              <h4>签到</h4>
-              <p>John Doe</p>
+              <h4>p2p pipes</h4>
+              <p>Mathias Buus</p>
             </div>
           </li>
           <li>
-            <time>08:15</time>
+            <time>11:00</time>
             <div>
-              <h4>签到</h4>
-              <p>John Doe</p>
+              <h4>微服务架构下的服务通讯</h4>
+              <p>雷宗民</p>
             </div>
           </li>
           <li>
-            <time>08:15</time>
+            <time>11:30</time>
             <div>
-              <h4>签到</h4>
-              <p>John Doe</p>
+              <h4>NERD DISCO: The Next Generation
+</h4>
+              <p>Tim Pietrusky</p>
+            </div>
+          </li>
+          <li></li>
+          <li>
+            <time>13:30</time>
+            <div>
+              <h4>JavaScript: The World&#39;s Best Programming Language
+</h4>
+              <p>Hax</p>
             </div>
           </li>
           <li>
-            <time>08:15</time>
+            <time>14:00</time>
             <div>
-              <h4>签到</h4>
-              <p>John Doe</p>
+              <h4>fibjs原理以及在孢子社区的实践</h4>
+              <p>庄恒飞</p>
             </div>
           </li>
+          <li>
+            <time>14:30</time>
+            <div>
+              <h4>抽奖 + 休息</h4>
+            </div>
+          </li>
+          <li>
+            <time>14:50</time>
+            <div>
+              <h4>Lighting Talk </h4>
+            </div>
+          </li>
+          <li>
+            <time>15:20</time>
+            <div>
+              <h4>Why you should be using XMPP in your next project</h4>
+              <p>Lloyd Watkin</p>
+            </div>
+          </li>
+          <li>
+            <time>15:50</time>
+            <div>
+              <h4>使用 React 构建在线 IDE 的应用实践</h4>
+              <p>刘辉</p>
+            </div>
+          </li>
+          <li>
+            <time>16:20</time>
+            <div>
+              <h4>休息</h4>
+            </div>
+          </li>
+          <li>
+            <time>16:30</time>
+            <div>
+              <h4>Diving in - WebGL and WebVR</h4>
+              <p>Martin Naumann</p>
+            </div>
+          </li>
+          <li>
+            <time>17:00</time>
+            <div>
+              <h4>Maintainable Node.js</h4>
+              <p>死马</p>
+            </div>
+          </li>
+          <li>
+            <time>17:30</time>
+            <div>
+              <h4>抽奖</h4>
+            </div>
+          </li>
+          <li></li>
+          <li></li>
         </ul>
       </div>
     </div>
-  </section> -->
+  </section>
   <!-- Banner -->
   <section class='banner second'>
     <div class='wrapper'>
@@ -471,7 +615,7 @@
           <a href='http://www.qiniu.com/' target='new'><img src='/images/qiniu.png' width='250' /></a>
         </li>
         <li>
-          <a href='http://bearyinnovative.com/' target='new'><img src='/images/bearyinnovative.png' height='130' /></a>
+          <a href='https://bearychat.com/' target='new'><img src='/images/bearyinnovative.png' height='130' /></a>
         </li>
         <li>
           <a href='https://coding.net/' target='new'><img src='/images/coding.png' width='250' /></a>
@@ -489,7 +633,7 @@
           <a href='http://www.upyun.com/' target='new'><img src='/images/upyun.png' width='250' /></a>
         </li>
         <li>
-          <a href='http://www.jinshuju.com/' target='new'><img src='/images/jinshuju.png' width='170' /></a>
+          <a href='http://www.jinshuju.net/' target='new'><img src='/images/jinshuju.png' width='170' /></a>
         </li>
       </ul>
     </div>
@@ -513,10 +657,10 @@
         <li>
           <a href='http://www.broadview.com.cn/' target='new'><img src='/images/broadview.png' width='250' /></a>
         </li>
-                <li>
+        <li>
           <a href='https://cnodejs.org/' target='new'><img src='/images/cnode.png' width='250' /></a>
         </li>
-                <li>
+        <li>
           <a href='http://www.ptpress.com.cn/default.aspx' target='new'><img src='/images/ptpress.png' width='250' /></a>
         </li>
       </ul>
