add afterparty to the last day on schedule

--- a/en/index.html
+++ b/en/index.html
@@ -588,7 +588,12 @@
               <h4>Lucky Draw</h4>
             </div>
           </li>
-          <li></li>
+          <li>
+            <time>19:00</time>
+            <div>
+              <h4>Afterparty</h4>
+            </div>
+          </li>
           <li></li>
         </ul>
       </div>
