--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
         </div>
       </li>
       <li>
-        <a href='http://careers.ef.com/cn/categories/technology/' target='new'>
+        <a href='https://github.com/EyalAr' target='new'>
           <img src='/images/speakers/16.jpg' />
           <div class='cover'>
             <div class='info'>
@@ -626,7 +626,7 @@
           <a href='https://coding.net/' target='new'><img src='/images/coding.png' width='250' /></a>
         </li>
         <li>
-          <a href='http://careers.ef.com/categories/technology/learning-labs/' target='new'><img src='/images/ef.png' width='130' /></a>
+          <a href='http://careers.ef.com/cn/categories/technology/' target='new'><img src='/images/ef.png' width='130' /></a>
         </li>
         <li>
           <a href='https://www.teambition.com/' target='new'><img src='/images/teambition.png' width='250' /></a>
